--- a/index.html
+++ b/index.html
@@ -3,164 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chatbot UI</title>
-  <style>
-    /* General styles */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-    .chat-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      width: 350px;
-      margin: 50px auto;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      background-color: white;
-      height: 500px;
-    }
-
-    .chat-box {
-      flex-grow: 1;
-      padding: 10px;
-      overflow-y: auto;
-      border-bottom: 1px solid #ccc;
-    }
-
-    .input-container {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ccc;
-      background-color: #f9f9f9;
-    }
-
-    #user-input {
-      width: 80%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-
-    #send-btn {
-      width: 15%;
-      padding: 10px;
-      margin-left: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    #send-btn:hover {
-      background-color: #45a049;
-    }
-
-    .message {
-      padding: 8px;
-      margin: 5px 0;
-      border-radius: 5px;
-    }
-
-    .user-message {
-      background-color: #DCF8C6;
-      align-self: flex-end;
-    }
-
-    .bot-message {
-      background-color: #f1f0f0;
-      align-self: flex-start;
-    }
-
-    /* For demonstration, we will show static messages */
-    .static-messages {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .static-messages .message {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .static-messages .user-message {
-      align-self: flex-end;
-    }
-
-    .static-messages .bot-message {
-      align-self: flex-start;
-    }
-  </style>
+  <title>Simple Textbox</title>
 </head>
 <body>
 
-  <div class="chat-container">
-    <div class="chat-box">
-      <div class="static-messages" id="chat-box">
-        <!-- Static Chatbot Messages for Example -->
-        <div class="message user-message">Hello</div>
-        <div class="message bot-message">Hi! How can I assist you today?</div>
-        <div class="message user-message">How are you?</div>
-        <div class="message bot-message">I'm doing great, thank you!</div>
-        <div class="message user-message">Bye</div>
-        <div class="message bot-message">Goodbye! Have a nice day!</div>
-      </div>
-    </div>
+  <h2>Enter Text</h2>
+  <input type="text" id="user-input" placeholder="Type something...">
+  <button id="submit-btn">Submit</button>
 
-    <!-- Static Input Area for UI -->
-    <div class="input-container">
-      <input type="text" id="user-input" placeholder="Type a message..." disabled>
-      <button id="send-btn" disabled>Send</button>
-    </div>
-  </div>
+  <p id="result"></p>
 
   <script>
-    // Get references to elements
     from seam.py import decoded_output
+    // Get references to elements
     const userInput = document.getElementById('user-input');
-    const sendBtn = document.getElementById('send-btn');
-    const chatBox = document.getElementById('chat-box');
+    const submitBtn = document.getElementById('submit-btn');
+    const resultDiv = document.getElementById('result');
 
-    // Enable input and send button after page load
-    window.onload = () => {
-      userInput.disabled = false;
-      sendBtn.disabled = false;
-    };
-
-    // Send button click event handler
-    sendBtn.addEventListener('click', () => {
-      const userMessage = userInput.value.trim();
-      if (userMessage) {
-        // Append user message to chat
-        appendMessage(userMessage, 'user-message');
-        
-        // Simulate bot response (for now a simple echo)
-        setTimeout(() => {
-          const botMessage = `decoded_output`; // Example bot response
-          appendMessage(botMessage, 'bot-message');
-        }, 1000);
-      }
-      userInput.value = ''; // Clear the input field after sending
-    });
-
-    // Function to append a new message to the chat box
-    function appendMessage(message, messageType) {
-      const messageDiv = document.createElement('div');
-      messageDiv.classList.add('message', messageType);
-      messageDiv.textContent = message;
-      chatBox.appendChild(messageDiv);
-      chatBox.scrollTop = chatBox.scrollHeight; // Auto scroll to the latest message
-    }
-
-    // Enable the Send button when the user starts typing
-    userInput.addEventListener('input', () => {
-      sendBtn.disabled = !userInput.value.trim();
+    // Handle Submit button click event
+    submitBtn.addEventListener('click', function() {
+      const inputText = userInput.value; // Get the input value
+      resultDiv.textContent = "You entered: " + decoded_output; // Display the entered text
+      userInput.value = ''; // Clear the input field
+      
     });
   </script>
 
