--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     // Handle Submit button click event
     submitBtn.addEventListener('click', function() {
       const inputText = userInput.value; // Get the input value
-      resultDiv.textContent = "You entered: " + decoded_output ; // Display the entered text
+      resultDiv.textContent = "You entered: " + inputText ; // Display the entered text
       userInput.value = ''; // Clear the input field
     });
   </script>
