--- a/index.html
+++ b/index.html
@@ -3,31 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Textbox</title>
+  <title>Simple Form</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f4f4f4;
+      margin: 0;
+    }
+
+    .container {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      text-align: center;
+    }
+
+    input[type="text"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
 
-  <h2>Enter Text</h2>
-  <input type="text" id="user-input" placeholder="Type something...">
-  <button id="submit-btn">Submit</button>
-
-  <p id="result"></p>
-
-  <script>
-    from seam.py import decoded_output
-    // Get references to elements
-    const userInput = document.getElementById('user-input');
-    const submitBtn = document.getElementById('submit-btn');
-    const resultDiv = document.getElementById('result');
-
-    // Handle Submit button click event
-    submitBtn.addEventListener('click', function() {
-      const inputText = userInput.value; // Get the input value
-      resultDiv.textContent = "You entered: " + inputText ; // Display the entered text
-      userInput.value = ''; // Clear the input field
-    });
-  </script>
+  <div class="container">
+    <h2>Enter Text</h2>
+    <form action="#">
+      <input type="text" placeholder="Type something..." name="user-input">
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 
 </body>
 </html>
-
