--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 
   <div class="container">
-    <h2>Enter Text</h2>
+    <h2>{{variable}}</h2>
     <form action="#">
       <input type="text" placeholder="Type something..." name="user-input">
       <button type="submit">Submit</button>
