--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 
   <div class="container">
-    <h2>{{ variable }}</h2>
+    <h2>hello</h2>
     <form action="#">
       <input type="text" placeholder="Type something..." name="user-input">
       <button type="submit">Submit</button>
