--- a/index.html
+++ b/index.html
@@ -1,72 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Form</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f4;
-      margin: 0;
-    }
-
-    .container {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      width: 300px;
-      text-align: center;
-    }
-
-    input[type="text"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-  </style>
-</head>
-<body>
-  <py-script>
-  print('Works')
-
-
-    
-  </py-script>
-
-  <div class="container">
-    <h2>hello</h2>
-    <form action="#">
-      <input type="text" placeholder="Type something..." name="user-input">
-      <button type="submit">Submit</button>
-    </form>
-  </div>
-
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <title>PyScript 2025.2.4</title>
+        <link rel="stylesheet" href="https://pyscript.net/releases/2025.2.4/core.css" />
+        <script type="module" src="https://pyscript.net/releases/2025.2.4/core.js"></script>
+    </head>
+    <body>
+        <h1>Hello world!</h1>
+        <p>These are the Python interpreters in PyScript 2025.2.4:</p>
+        <script type="py">  <!-- Pyodide -->
+            from pyscript import display
+            import sys
+            display(sys.version)
+        </script>
+        <script type="mpy">  <!-- MicroPython -->
+            from pyscript import display
+            import sys
+            display(sys.version)
+        </script>
+    </body>
 </html>
-
