--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Hello world!</h1>
         <p>These are the Python interpreters in PyScript 2025.2.4:</p>
-        <script type="py">  <!-- Pyodide -->
+        <script type="py">  
             from transformers import GPT2LMHeadModel, GPT2Tokenizer
             from flask import Flask, render_template
             
