--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Hello world!</h1>
         <p>These are the Python interpreters in PyScript 2025.2.4:</p>
         <script type="py">  
+            import transformers
             from transformers import GPT2LMHeadModel, GPT2Tokenizer
             from flask import Flask, render_template
             
