--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       }
 
       .chat-box {
+        height: 800px;
         max-height: 1800px;
         overflow-y: auto;
         margin-bottom: 20px;
