--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
       }
 
       input {
-        width: 80%;
-        padding: 10px;
+        width: 90%;   /* Adjust the width of the typing area */
+        padding: 20px;  /* Increased padding to make it taller */
         border-radius: 8px;
         border: 1px solid #ccc;
+        font-size: 16px;  /* Larger font size for typing */
+        height: 50px;  /* Set a height to make the input field taller */
       }
-
       button {
         padding: 10px;
         border-radius: 8px;
