--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
       input {
         width: 90%;   /* Adjust the width of the typing area */
-        padding: 20px;  /* Increased padding to make it taller */
+        padding: 100px;  /* Increased padding to make it taller */
         border-radius: 8px;
         border: 1px solid #ccc;
-        font-size: 16px;  /* Larger font size for typing */
+        font-size: 32px;  /* Larger font size for typing */
         height: 50px;  /* Set a height to make the input field taller */
       }
       button {
@@ -90,8 +90,8 @@
 <body>
    <div class="chat-container">
       <div class="chat-box" id="chat-box">
-         <div class="message bot-message">Hello! I can analyze your emotions based on what you type. How can I help you deal with these emotions?</div>
-         <p>Use this as an emotional counselor, <b>NOT</b> your school counselor or your homework director.</p>
+         <div class="message bot-message">Hello! I am an Data Anaylzer AI, provide a database schema and I will analyze the data set and graph it if possible!</div>
+         <p>Do not use for malicious purposes<b>NOT</b> to be used for these malicious purposes!</p>
       </div>
 
       <!-- Form for user input -->
