--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
       body {
         font-family: Arial, sans-serif;
-        background-color: red;
-        animation-name: background_change;
-        animation-duration: 5s;
-        animation-iteration-count: infinite;
+        background-color: black;
         max-width: 100%;
         height: auto;
       }
