--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       .chat-container {
         max-width: 800px;
         margin: 50px auto;
-        background: hsla(0, 96%, 48%, 1);
-        background: linear-gradient(315deg, hsla(0, 96%, 48%, 1) 0%, hsla(59, 100%, 50%, 1) 100%);
+        background-color: white;
         border-radius: 10px;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         padding: 20px;
