--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!-- Form for user input -->
       <form method="POST" action="/" onsubmit="displayMessage(); return false;">
          <input type="text" id="user-input" name="user_input" placeholder="How do you feel..." required>
-         <button type="submit">Submit</button>
+         <button type="submit">➡️</button>
       </form>
 
       <!-- Placeholder for dynamic message display -->
